--- a/emacs/emacs.d/settings/main.org
+++ b/emacs/emacs.d/settings/main.org
@@ -53,12 +53,12 @@
 ** OS specific
 *** Help Emacs to find ispell program on Darwin
     #+BEGIN_SRC emacs-lisp
-      (if (string= system-type "Darwin")
+      (if (string= system-type "darwin")
           (setq ispell-program-name '"/usr/local/bin/ispell"))
     #+END_SRC
 *** PATH
     #+BEGIN_SRC emacs-lisp
-      (if (string= system-type "Darwin")
+      (if (string= system-type "darwin")
           (setenv "PATH"
                   (concat
                    "/Library/TeX/texbin" ":"
@@ -175,7 +175,7 @@
                                          (expand-file-name "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include")
                                          (expand-file-name "/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include")
                                          (expand-file-name "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/System/Library/Frameworks"))))))
-      (if (string= system-type "Darwin")
+      (if (string= system-type "darwin")
           (m-lsp-darwin))
     #+END_SRC
 ** Multiple workspaces
