Remove company-lsp as it was replaced by clangd-capf

--- a/emacs/emacs.d/settings/main.org
+++ b/emacs/emacs.d/settings/main.org
@@ -18,7 +18,7 @@
                     org-superstar
                     lsp-treemacs
                     clang-capf
-                    company-lsp company
+                    company
                     flycheck
                     lsp-ui
                     lsp-mode
