Update emacs configuration
Add double colon at the end of the path to the archive file.

--- a/emacs/emacs.d/settings/main.org
+++ b/emacs/emacs.d/settings/main.org
@@ -391,7 +391,7 @@
 #+END_SRC
 *** Agenda
 #+BEGIN_SRC emacs-lisp
-(setq org-archive-location "~/arei/todo_archive.org")
+(setq org-archive-location "~/arei/todo_archive.org::")
 #+END_SRC
 *** Key bindings suggested [[https://orgmode.org/manual/Activation.html#Activation][here]]
 #+BEGIN_SRC emacs-lisp
